--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ PASSWORD="your_postgres_password"
 DBNAME="your_database_name"
 DBPORT="5432"
 CONNECTION_STRING="your_connection_string"
+API_SECRET="your api secret"
+GOOGLE_PROJECT_ID="your google project id"
+GOOGLE_OAUTH_CLIENT_ID="your client id"
+GOOGLE_OAUTH_CLIENT_SECRET="your client secret"
+GOOGLE_OAUTH_REDIRECT_URL="http://localhost:8000/api/sessions/oauth/google"
