update env example

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,4 @@ API_SECRET="your api secret"
 GOOGLE_PROJECT_ID="your google project id"
 GOOGLE_OAUTH_CLIENT_ID="your client id"
 GOOGLE_OAUTH_CLIENT_SECRET="your client secret"
-GOOGLE_OAUTH_REDIRECT_URL="http://localhost:8000/api/sessions/oauth/google"
+GOOGLE_OAUTH_REDIRECT_URL="https://mingle-v1.onrender.com/api/v1/users/google/signup"
